Ensure that enlarged photos don't exceed screen width on smaller screens

--- a/wp-content/themes/meltingpot-child/style.css
+++ b/wp-content/themes/meltingpot-child/style.css
@@ -356,6 +356,11 @@ img[data-enlargable] {
     cursor: -webkit-zoom-in; 
     cursor: zoom-in;
 }
+@media screen and (max-width: 640px) {
+	.img-enlargable {
+		background-size: contain !important;
+	}
+}
 /* End Utilities */
 
 /* Lesson styles*/
